unir vistar y js a loginRegister

--- a/packages/app/html/contacto.html
+++ b/packages/app/html/contacto.html
@@ -3,24 +3,23 @@
     <head>
         <title>Salud Mental</title>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="css/fontello.css">
-        <link rel="stylesheet" href="css/estilos.css">
-        <script src="js/js.js"></script>
+        <link rel="stylesheet" href="../css/fontello.css">
+        <link rel="stylesheet" href="../css/estilos.css">
+        <script src="../js/js.js"></script>
     <head>
     <header>
         <div class= "contenedor">
             <h1 class="icon-facebook-squared">Salud Mental</h1>
             <label id="icon-menu" class="icon-menu"></label>
             <nav class="menu">
-                 <a href="index.html">Inicio</a>
-                 <a href="cursos.html">Cursos</a>
-                 <a href="blog.html">Blog</a>
-                 <a href="contacto.html">Contacto</a>
-            </nav>    
-         </div> 
+                <a href="index.html">Inicio</a>
+                <a href="cursos.html">Cursos</a>
+                <a href="blog.html">Blog</a>
+                <a href="contacto.html">Contacto</a>
+            </nav>
+        </div>
     </header>
     <body>
-        
         <main>
             <section id="info" style="padding-top: 60px;">
                 <p>Contacto</p>
@@ -30,7 +29,6 @@
                 <a href="index.html" style="padding: 10px; background-color: red; color: white;">Regresar al inicio</a>
             </section>
         </main>
-        
         <footer>
             <div class="contenedor">
                 <p class="copy">Salud Mental &copy; 2021</p>
