--- a/packages/app/html/cursos.html
+++ b/packages/app/html/cursos.html
@@ -3,9 +3,9 @@
     <head>
         <title>Salud Mental</title>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="css/fontello.css">
-        <link rel="stylesheet" href="css/estilos.css">
-        <script src="js/js.js"></script>
+        <link rel="stylesheet" href="../css/fontello.css">
+        <link rel="stylesheet" href="../css/estilos.css">
+        <script src="../js/js.js"></script>
 
     <head>
     <header>
@@ -13,12 +13,12 @@
             <h1 class="icon-facebook-squared">Salud Mental</h1>
             <label id="icon-menu" class="icon-menu"></label>
             <nav class="menu">
-                 <a href="index.html">Inicio</a>
-                 <a href="cursos.html">Cursos</a>
-                 <a href="blog.html">Blog</a>
-                 <a href="contacto.html">Contacto</a>
-            </nav>    
-         </div> 
+                <a href="index.html">Inicio</a>
+                <a href="cursos.html">Cursos</a>
+                <a href="blog.html">Blog</a>
+                <a href="contacto.html">Contacto</a>
+            </nav>
+        </div>
     </header>
     <body>
         <main>
@@ -26,19 +26,19 @@
                 <h3>Testimonios</h3>
                 <div class="contenedor">
                     <div class="info-pet">
-                        <img src="img/camila.jpg" alt="">
+                        <img src="../img/camila.jpg" alt="">
                         <h4>Camila Corredor</h4>
                     </div>
                     <div class="info-pet">
-                        <img src="img/tom.jpg" alt="">
+                        <img src="..//img/tom.jpg" alt="">
                         <h4>Jerry Valdez</h4>
                     </div>
-                     <div class="info-pet">
-                        <img src="img/gab.jpg" alt="">
+                    <div class="info-pet">
+                        <img src="../img/gab.jpg" alt="">
                         <h4>Gabriela Jimenez</h4>
                     </div>
                     <div class="info-pet">
-                        <img src="img/tom2.jpg" alt="">
+                        <img src="../img/tom2.jpg" alt="">
                         <h4>Andres Sanchez</h4>
                     </div>
                 </div>
