--- a/packages/app/html/registroCrador.html
+++ b/packages/app/html/registroCrador.html
@@ -8,48 +8,45 @@
     <script src="#"></script>
     <link rel="preload" href="../css/estiloLR.css" as="style">
     <link rel="stylesheet" href="../css/estiloLR.css">
+    <script src="../js/register.js"></script>
 </head>
 <body>
     <main class="login2">
         <section>
-            <form action="">
+            <div>
                 <div class="regis">
                     <h1> registrarse</h1>
                 </div>
                 <div>
                     <label>name*</label>
-                    <input type="text" id="item" placeholder="Name">
+                    <input type="text" id="nombre" name="nombre" placeholder="Name" required>
                 </div>
                 <div>
                     <label>last name*</label>
-                    <input type="text" id="item" placeholder="Last name">
+                    <input type="text" id="apellido" name="apellido" placeholder="Last name" required>
                 </div>
                 <div>
                     <label>password*</label>
-                    <input type="password" id="item" placeholder="password">
+                    <input type="password" id="contraseña" name="contraseña"placeholder="password" required>
                 </div>
-                <div>
+                <!--<div>
                     <label>re-enter password*</label>
-                    <input type="password" id="item"placeholder="re-enter password">
-                </div>
+                    <input type="password" id="item"placeholder="re-enter password" required>
+                </div>-->
                 <div>
                     <label>email*</label>
-                    <input type="email" id="item" placeholder="@email">
+                    <input type="email" id="email" name="email" placeholder="@email" required>
                 </div>
-                <div>
+                <!--<div>
                     <label>phone number</label>
-                    <input type="number" min="0" id="item"placeholder="phone number">
-                </div>
+                    <input type="number" min="0" id="telefono" name="telefono" placeholder="phone number" required>
+                </div>-->
                 <div>
-                    <label>description</label><br>
-                    <textarea name="" id="" cols="40" rows="3" placeholder="the description is not mandatory"></textarea>
-                </div>
-                <div>
-                    <input type="submit" value=" registe NOW">
+                    <input onClick="register()" type="submit" id="button-register" value="registe NOW">
                 </div>
                 <a href="#">I don't want to register ;.;</a><br>
                 <a href="#">I already have an account</a>
-            </form>
+            </div>
         </section>
     </main>
 </body>
