--- a/packages/app/public/html/contacto.html
+++ b/packages/app/public/html/contacto.html
@@ -26,7 +26,7 @@
                 <hr>
                 <br>
                 <br>
-                <a href="index.html" style="padding: 10px; background-color: red; color: white;">Regresar al inicio</a>
+                <a href="index.html" class="rojo"">Regresar al inicio</a>
             </section>
         </main>
         <footer>
