--- a/packages/app/public/html/blog.html
+++ b/packages/app/public/html/blog.html
@@ -56,7 +56,7 @@
                 <hr>
                 <br>
                 <br>
-                <a href="contacto.html" style="padding: 10px; background-color: red; color: white;">Contáctanos</a>
+                <a href="contacto.html" class="rojo">Contáctanos</a>
             </section>
         </main>
         <footer>
