--- a/packages/app/public/html/cursos.html
+++ b/packages/app/public/html/cursos.html
@@ -46,11 +46,9 @@
                 <hr>
                 <br>
                 <br>
-                <a href="blog.html" style="padding: 10px; background-color: red; color: white;">Mira nuestro Blog</a>
-                
+                <a href="blog.html" class="rojo">Mira nuestro Blog</a>
             </section>
         </main>
-        
         <footer>
             <div class="contenedor">
                 <p class="copy">Salud Mental &copy; 2021</p>
