--- a/packages/app/public/html/index.html
+++ b/packages/app/public/html/index.html
@@ -13,11 +13,11 @@
             <label id="icon-menu" class="icon-menu"></label>
             <nav class="menu">
                 <a href="index.html">Inicio</a>
-                <a href="cursos.html">Cursos</a>
+                <a href="cursos.html" >Cursos</a>
                 <a href="blog.html">Blog</a>
                 <a href="contacto.html">Contacto</a>
-                <a href="login.html" style="padding: 4px; background-color: red; color: white;">Login</a>
-                <a href="registroCrador.html" style="padding: 4px; background-color: red; color: white;">Registro</a>
+                <a href="login.html" class="otra">Login</a>
+                <a href="registroCrador.html" class="otra">Registro</a>
             </nav>
         </div>
     </header>
@@ -54,7 +54,6 @@
                         <h4>Te escuchamos, te comprendemos</h4>
                     </article>
                 </div>
-                <a href="cursos.html">Cursos</a>
             </section>
             <section id="info">
                 <h3>Testimonios.</h3>
