--- a/packages/app/public/html/login.html
+++ b/packages/app/public/html/login.html
@@ -7,7 +7,22 @@
     <link rel="preload" href="../css/estiloLR.css" as="style">
     <link rel="stylesheet" href="../css/estiloLR.css">
     <script src="../js/login.js"></script>
+    <link rel="stylesheet" href="../css/fontello.css">
+    <link rel="stylesheet" href="../css/estilos.css">
+    <script src="../js/js.js"></script>
 </head>
+<header>
+    <div class= "contenedor">
+        <h1 class="icon-facebook-squared">Salud Mental</h1>
+        <label id="icon-menu" class="icon-menu"></label>
+        <nav class="menu">
+            <a href="index.html">Inicio</a>
+            <a href="cursos.html" >Cursos</a>
+            <a href="blog.html">Blog</a>
+            <a href="contacto.html">Contacto</a>
+        </nav>
+    </div>
+</header>
 <body class="color">
     <div class="login xs">
         <div class="loginx">
@@ -17,8 +32,7 @@
             <path d="M21 3l-6.5 18a0.55 .55 0 0 1 -1 0l-3.5 -7l-7 -3.5a0.55 .55 0 0 1 0 -1l18 -6.5" />
         </svg>
         </div>
-            <h1>Login</h1>
-            <div>
+        <div>
                 <!--Usuario-->
                 <label for="username">Username</label>
                 <input type="text" name="email" id="email" placeholder="Username" required>
@@ -29,18 +43,7 @@
                 <input onClick="login()" type="submit" id="button-login" value="Sing In">
                 <a href="#">Lost your password?</a><br>
                 <a href="#">Don't have an acount?</a>
-            </div>
-    </div>
-    <footer>
-        <div class="contenedor">
-            <p class="copy">Salud Mental &copy; 2021</p>
-            <div class="sociales">
-                <label class="icon-facebook-squared" href="#"></label>
-                <label class="icon-twitter" href="#"></label>
-                <label class="icon-instagram" href="#"></label>
-                <label class="icon-gplus" href="#"></label>
-            </div>
         </div>
-    </footer>
+    </div>
 </body>
 </html>
