--- a/packages/app/public/html/registroCrador.html
+++ b/packages/app/public/html/registroCrador.html
@@ -9,7 +9,22 @@
     <link rel="preload" href="../css/estiloLR.css" as="style">
     <link rel="stylesheet" href="../css/estiloLR.css">
     <script src="../js/register.js"></script>
+    <link rel="stylesheet" href="../css/fontello.css">
+    <link rel="stylesheet" href="../css/estilos.css">
+    <script src="../js/js.js"></script>
 </head>
+<header>
+    <div class= "contenedor">
+        <h1 class="icon-facebook-squared">Salud Mental</h1>
+        <label id="icon-menu" class="icon-menu"></label>
+        <nav class="menu">
+            <a href="index.html">Inicio</a>
+            <a href="cursos.html" >Cursos</a>
+            <a href="blog.html">Blog</a>
+            <a href="contacto.html">Contacto</a>
+        </nav>
+    </div>
+</header>
 <body>
     <main class="login2">
         <section>
