--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
-        <title>Salud Mental</title>
+        <title>HEALTH SPACE</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="css/fontello.css">
         <link rel="stylesheet" href="css/estilos.css">
@@ -9,15 +9,15 @@
     </head>
     <header>
         <div class= "contenedor">
-            <h1 class="icon-facebook-squared">Salud Mental</h1>
+            <h1 class="icon-facebook-squared">HEALTH SPACE</h1>
             <label id="icon-menu" class="icon-menu"></label>
             <nav class="menu">
                  <a href="index.html">Inicio</a>
                  <a href="cursos.html">Cursos</a>
                  <a href="blog.html">Blog</a>
                  <a href="contacto.html">Contacto</a>
-                <a href="login.html" style="padding: 4px; background-color: red; color: white;">Login</a>
-                <a href="registro.html" style="padding: 4px; background-color: red; color: white;">Registro</a>
+                <a href="login.html" style="padding: 4px; background-color:#92a5eaf5; color: #1e1e5d;">Login</a>
+                <a href="registro.html" style="padding: 4px; background-color:#92a5eaf5; color:#1e1e5d;">Registro</a>
             </nav>    
          </div> 
     </header>
@@ -27,7 +27,7 @@
         <main>
             <section id ="bienvenidos">
                 <div class="contenedor">
-                    <h2>BIENVENIDOS A NUESTRO CLUB</h2>
+                    <h2>HEALTH SPACE</h2>
                     <p>Si usted o alguien que conoce tiene una enfermedad mental, 
                         problemas emocionales o inquietudes sobre sus salud mental, 
                         existen formas de obtener ayuda. Descubre como nuestro club le ofrece un método simple 
