--- a/packages/app/public/html/crearEventos.html
+++ b/packages/app/public/html/crearEventos.html
@@ -19,7 +19,7 @@
     <textarea name="textarea" id="descripcion" rows="8" cols="47"></textarea>
     <p>Estoy de acuerdo con <a href="#">Terminos y Condiciones</a></p>
     <input class="botons" type="button" onclick="getData()" value="Crear">
-    <p><a href="#">volver</a></p>
+    <p><a href="http://localhost:5000/html/tableroDeEventos.html">volver</a></p>
   </section>
   <script src="../js/crearEvento.js"></script>
 </body>
