se actualiza el registro con validaciones

--- a/packages/app/html/blog.html
+++ b/packages/app/html/blog.html
@@ -3,9 +3,9 @@
     <head>
         <title>Salud Mental</title>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="css/fontello.css">
-        <link rel="stylesheet" href="css/estilos.css">
-        <script src="js/js.js"></script>
+        <link rel="stylesheet" href="../css/fontello.css">
+        <link rel="stylesheet" href="../css/estilos.css">
+        <script src="../js/js.js"></script>
         <script type="text/javascript">
             function leermas() {
                 var selector = document.getElementById("leermasinfo");
