--- a/packages/app/html/index.html
+++ b/packages/app/html/index.html
@@ -3,9 +3,9 @@
     <head>
         <title>Salud Mental</title>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="css/fontello.css">
-        <link rel="stylesheet" href="css/estilos.css">
-        <script src="js/js.js"></script>
+        <link rel="stylesheet" href="../css/fontello.css">
+        <link rel="stylesheet" href="../css/estilos.css">
+        <script src="../js/js.js"></script>
     </head>
     <header>
         <div class= "contenedor">
