--- a/packages/app/public/html/index.html
+++ b/packages/app/public/html/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
-        <title>Salud Mental</title>
+        <title>HEALTH SPACE</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="../css/fontello.css">
         <link rel="stylesheet" href="../css/estilos.css">
@@ -9,7 +9,7 @@
     </head>
     <header>
         <div class= "contenedor">
-            <h1 class="icon-facebook-squared">Salud Mental</h1>
+            <h1 class="icon-twitter">HEALTH SPACE</h1>
             <label id="icon-menu" class="icon-menu"></label>
             <nav class="menu">
                 <a href="index.html">Inicio</a>
