--- a/packages/app/public/html/tableroDeEventos.html
+++ b/packages/app/public/html/tableroDeEventos.html
@@ -42,9 +42,11 @@
             <input type="checkbox" id="menu-bar">
             <label class="icon-menu" for = "menu-bar" ></label>
             <nav class="menu">
-                <a href="index.html">Mi Perfil</a>
-                <a href="cursos.html" >Tablero de actividades</a>
-                <a href="blog.html">salir</a>
+                <a href="tableroDeEventos.html">Mi Perfil</a>
+                <a href="tableroDeEventos.html" >Actividades</a>
+                <a href="crearEventos.html">Crear Evento</a>
+                <a href="index.html">salir</a>
+                
             </nav>
         </div>
     </header>
