Union final de cambios

--- a/packages/app/public/html/crearEventos.html
+++ b/packages/app/public/html/crearEventos.html
@@ -10,7 +10,7 @@
 <body>
   <section class="Crear-evento">
     <h4>Crear un evento</h4>
-    <input class="controls" type="text" name="palabras" id="palabras" placeholder="Ingrese las palabras claves de su evento">
+    <input class="controls" type="text" name="palabras" id="palabras" placeholder="Ingrese la categoria">
     <input class="controls" type="text" name="nombreEvento" id="nombreEvento" placeholder="Ingrese el nombre del evento">
     <b>Ingrese la fecha del evento:</b>
     <input class="controls" type="date" name="fecha" id="fecha">
