--- a/packages/app/public/html/login.html
+++ b/packages/app/public/html/login.html
@@ -35,10 +35,10 @@
         </div>
         <div>
                 <!--Usuario-->
-                <label for="username">Username</label>
-                <input type="text" name="email" id="email" placeholder="Username" required>
+                <label for="email">Email</label>
+                <input type="text" name="email" id="email" placeholder="email" required>
                 <!--Password-->
-                <label for="Password">Password</label>
+                <label for="contraseña">Password</label>
                 <input type="password" name="contraseña" id="contraseña" placeholder="Password" required>
 
                 <input onClick="login()" type="submit" id="button-login" value="Sing In">
