--- a/packages/app/public/html/tableroDeEventos.html
+++ b/packages/app/public/html/tableroDeEventos.html
@@ -45,7 +45,7 @@
                 <a href="tableroDeEventos.html">Mi Perfil</a>
                 <a href="tableroDeEventos.html" >Actividades</a>
                 <a href="crearEventos.html">Crear Evento</a>
-                <a href="index.html">salir</a>
+                <a onclick="logout()" href="index.html">salir</a>
                 
             </nav>
         </div>
