--- a/packages/app/public/html/contacto.html
+++ b/packages/app/public/html/contacto.html
@@ -9,7 +9,7 @@
     <head>
     <header>
         <div class= "contenedor">
-            <h1 class="icon-facebook-squared">Salud Mental</h1>
+            <h1 class="">HEALTH SPACE</h1>
             <label id="icon-menu" class="icon-menu"></label>
             <nav class="menu">
                 <a href="index.html">Inicio</a>
