--- a/packages/app/public/html/login.html
+++ b/packages/app/public/html/login.html
@@ -14,7 +14,7 @@
 
 <header>
     <div class= "contenedor">
-        <h1 class="icon-facebook-squared">Salud Mental</h1>
+        <h1 class="">HEALTH SPACE</h1>
         <label id="icon-menu" class="icon-menu"></label>
         <nav class="menu">
             <a href="index.html">Inicio</a>
@@ -25,7 +25,7 @@
     </div>
 </header>
 <body class="color">
-    <div class="login xs">
+    <div class="login xs sombra">
         <div class="loginx">
         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-send" width="80" height="80" viewBox="0 0 24 24" stroke-width="1" stroke="#00bfd8" fill="none" stroke-linecap="round" stroke-linejoin="round">
             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
