--- a/packages/app/public/html/registroCrador.html
+++ b/packages/app/public/html/registroCrador.html
@@ -15,7 +15,7 @@
 </head>
 <header>
     <div class= "contenedor">
-        <h1 class="icon-facebook-squared">Salud Mental</h1>
+        <h1 class="">HEALTH SPACE</h1>
         <label id="icon-menu" class="icon-menu"></label>
         <nav class="menu">
             <a href="index.html">Inicio</a>
@@ -26,11 +26,11 @@
     </div>
 </header>
 <body>
-    <main class="login2">
+    <main class="login2 sombra">
         <section>
             <div>
                 <div class="regis">
-                    <h1> registrarse</h1>
+                    <h1> </h1>
                 </div>
                 <div>
                     <label>name*</label>
@@ -57,7 +57,7 @@
                     <input type="number" min="0" id="telefono" name="telefono" placeholder="phone number" required>
                 </div>-->
                 <div>
-                    <input onClick="register()" type="submit" id="button-register" value="registe NOW">
+                    <input onClick="register()" type="submit" id="button-register" value="register NOW">
                 </div>
                 <a href="#">I don't want to register ;.;</a><br>
                 <a href="#">I already have an account</a>
