--- a/packages/app/public/html/crearEventos.html
+++ b/packages/app/public/html/crearEventos.html
@@ -4,20 +4,35 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="../css/fontello.css">
+  <link rel="stylesheet" href="../css/estilos.css">
   <link rel="stylesheet" href="../css/estiloCrearEvento.css">
+  <script src="../js/js.js"></script>
   <title>Crear un evento</title>
 </head>
+<header>
+  <div class= "contenedor">
+      <h1 class="">HEALTH SPACE</h1>
+      <label id="icon-menu" class="icon-menu"></label>
+      <nav class="menu">
+          <a href="index.html">Inicio</a>
+          <a href="cursos.html" >Cursos</a>
+          <a href="blog.html">Blog</a>
+          <a href="contacto.html">Contacto</a>
+      </nav>
+  </div>
+</header>
 <body>
-  <section class="Crear-evento">
+  <section class="Crear-evento sombra">
     <h4>Crear un evento</h4>
     <input class="controls" type="text" name="palabras" id="palabras" placeholder="Ingrese la categoria">
     <input class="controls" type="text" name="nombreEvento" id="nombreEvento" placeholder="Ingrese el nombre del evento">
     <b>Ingrese la fecha del evento:</b>
     <input class="controls" type="date" name="fecha" id="fecha">
     <input class="controls" type="text" name="direccion" id="direccion" placeholder="Ingrese la direccion del evento">
-    <b>Ingrese una descripción del evento:</b>
-    <textarea name="textarea" id="descripcion" rows="8" cols="47"></textarea>
-    <p>Estoy de acuerdo con <a href="#">Terminos y Condiciones</a></p>
+    <b>Ingrese una descripción del Evento:</b>
+    <textarea name="textarea" id="descripcion" rows="3" cols="60"></textarea>
+    <p>Estoy de acuerdo con <input type="radio"><a href="#">Terminos y Condiciones</a></p>
     <input class="botons" type="button" onclick="getData()" value="Crear">
     <p><a href="http://localhost:5000/html/tableroDeEventos.html">volver</a></p>
   </section>
