ModifiqueMain y agregue html de perfiles

--- a/packages/app/public/html/cursos.html
+++ b/packages/app/public/html/cursos.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Salud Mental</title>
+        <title>HEALTH SPACE</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="../css/fontello.css">
         <link rel="stylesheet" href="../css/estilos.css">
