--- a/packages/app/public/html/perfilUsuario.html
+++ b/packages/app/public/html/perfilUsuario.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Tablero De Actividades</title>
+        <title>Pérfil</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
         <link rel="stylesheet" type="text/css" href="../alertifyjs/css/alertify.css">
@@ -42,11 +42,10 @@
             <input type="checkbox" id="menu-bar">
             <label class="icon-menu" for = "menu-bar" ></label>
             <nav class="menu">
-                <a href="tableroDeEventos.html">Mi Perfil</a>
+                <a href="perfilUsuario.html">Mi Perfil</a>
                 <a href="tableroDeEventos.html" >Actividades</a>
-                <a href="crearEventos.html">Crear Evento</a>
+                <a href=" ">Ver Dashboard</a>
                 <a href="index.html">salir</a>
-                
             </nav>
         </div>
     </header>
