--- a/packages/app/public/html/tableroDeEventosPsicologo.html
+++ b/packages/app/public/html/tableroDeEventosPsicologo.html
@@ -42,7 +42,7 @@
             <input type="checkbox" id="menu-bar">
             <label class="icon-menu" for = "menu-bar" ></label>
             <nav class="menu">
-                <a href="tableroDeEventos.html">Mi Perfil</a>
+                <a href="perfilUsuario.html">Mi Perfil</a>
                 <a href="tableroDeEventos.html" >Actividades</a>
                 <a href="crearEventos.html">Crear Evento</a>
                 <a href="index.html">salir</a>
@@ -60,7 +60,7 @@
                     <h2>TABLERO DE ACTIVIDADES</h2>
                 </div>
                 <div id = "alert" class="row padre">
-                    <div class="col-lg-3 col-md-6">
+                    <div class="col-lg-3 col-md-6 sombra">
                         <div class="service-item">
                             <h3>Escuela de Familias</h3>
                             <p>
