--- a/packages/app/public/html/crearEventos.html
+++ b/packages/app/public/html/crearEventos.html
@@ -15,10 +15,10 @@
       <h1 class="">HEALTH SPACE</h1>
       <label id="icon-menu" class="icon-menu"></label>
       <nav class="menu">
-          <a href="index.html">Inicio</a>
-          <a href="cursos.html" >Cursos</a>
-          <a href="blog.html">Blog</a>
-          <a href="contacto.html">Contacto</a>
+        <a href="perfilUsuario.html">Mi Perfil</a>
+        <a href="tableroDeEventos.html" >Actividades</a>
+        <a href="crearEventos.html">Crear Evento</a>
+        <a href="index.html">salir</a>
       </nav>
   </div>
 </header>
