Add seach  component to home activities

--- a/packages/app/public/html/tableroDeEventos.html
+++ b/packages/app/public/html/tableroDeEventos.html
@@ -39,6 +39,10 @@
     <header>
         <div class= "contenedor">
             <h1>HEALTH SPACE</h1>
+            <div class="search">
+                <input id="busqueda" onkeyup="search(event)" type="search" name="busqueda" placeholder="Futbol, Psicologia, Cocinar ....">
+                <img src="../img/search/search.svg" alt="">
+            </div>
             <input type="checkbox" id="menu-bar">
             <label class="icon-menu" for = "menu-bar" ></label>
             <nav class="menu">
