Se trabajo en el backend y front

--- a/packages/app/public/html/perfilPsicologo.html
+++ b/packages/app/public/html/perfilPsicologo.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Pérfil</title>
+        <title>Pérfil Psicologo|Helth Space</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
         <link rel="stylesheet" type="text/css" href="../alertifyjs/css/alertify.css">
@@ -44,7 +44,7 @@
             <nav class="menu">
                 <a href="perfilUsuario.html">Mi Perfil</a>
                 <a href="tableroDeEventos.html" >Actividades</a>
-                <a href="crearEventos.html">Crear Evento</a>
+                <a href="crearEventos.html">Crear evento</a>
                 <a href="index.html">salir</a>
             </nav>
         </div>
