--- a/packages/app/public/html/perfilUser.html
+++ b/packages/app/public/html/perfilUser.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Pérfil</title>
+        <title>Pérfil User|Helth Space</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
         <link rel="stylesheet" type="text/css" href="../alertifyjs/css/alertify.css">
@@ -32,7 +32,7 @@
         <link rel="stylesheet" href="../css/styleAc.css">
         <link rel="stylesheet" href="../css/estilosAc.css">
         <link rel="stylesheet" href="../css/menuAc.css">
-        <script src="../js/activity.js"></script>
+        <script src="../js/perfilUser.js"></script>
 
     </head>
     <!-- Menu -->
@@ -52,6 +52,22 @@
 
     <body>
 
+        <div class = "sevice">
+            <div class= "contenedor1" id="perfil">
+                <br>
+                <br>
+                <br>
+                <div class="col-12 my-13 pt-3 shadow">
+                    <hr>
+                    <div class="contenedor2">
+                        <div class="section-header">
+                            <h2>Lista de Actividades</h2>
+                        </div>
+                    </div>
+                </div>
+            
+            </div>
+        </div>
         <!-- Service End -->
         <!-- Service End -->
 
