--- a/packages/app/public/html/tableroDeEventos.html
+++ b/packages/app/public/html/tableroDeEventos.html
@@ -46,7 +46,7 @@
             <input type="checkbox" id="menu-bar">
             <label class="icon-menu" for = "menu-bar" ></label>
             <nav class="menu">
-                <a href="tableroDeEventos.html">Mi Perfil</a>
+                <a href="perfilUsuario.html">Mi Perfil</a>
                 <a href="tableroDeEventos.html" >Actividades</a>
                 <a href=" ">Ver Dashboard</a>
                 <a onclick="logout()" href="index.html">salir</a>
