Se creo el boton de eliminar actividades

--- a/packages/app/public/html/perfilUsuario.html
+++ b/packages/app/public/html/perfilUsuario.html
@@ -32,7 +32,7 @@
         <link rel="stylesheet" href="../css/styleAc.css">
         <link rel="stylesheet" href="../css/estilosAc.css">
         <link rel="stylesheet" href="../css/menuAc.css">
-        <script src="../js/perfilUser.js"></script>
+        
 
     </head>
     <!-- Menu -->
@@ -40,7 +40,7 @@
         <div class= "contenedor">
             <h1>HEALTH SPACE</h1>
             <input type="checkbox" id="menu-bar">
-            <label class="icon-menu" for = "menu-bar" ></label>
+            <label class="icon-menu" for = "menu-bar" id="icon-menu"></label>
             <nav class="menu">
                 <a href="perfilUsuario.html">Mi Perfil</a>
                 <a href="tableroDeEventos.html" >Actividades</a>
@@ -54,9 +54,6 @@
 
         <div class = "sevice">
             <div class= "contenedor1" id="perfil">
-                <br>
-                <br>
-                <br>
                 <div class="col-12 my-13 pt-3 shadow">
                     <hr>
                     <div class="contenedor2">
@@ -65,7 +62,6 @@
                         </div>
                     </div>
                 </div>
-            
             </div>
         </div>
         <!-- Service End -->
@@ -88,6 +84,7 @@
 
         <!-- Template Javascript -->
         <script src="../js/main.js"></script>
+        <script src="../js/perfilUser.js"></script>
     </body>
 </html>
 
