Se agrego el perfil del sicologo

--- a/packages/app/public/html/crearEventos.html
+++ b/packages/app/public/html/crearEventos.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="../css/estilos.css">
   <link rel="stylesheet" href="../css/estiloCrearEvento.css">
   <script src="../js/js.js"></script>
-  <title>Crear un evento</title>
+  <title>Crear Evento|Health Space</title>
 </head>
 <header>
   <div class= "contenedor">
