--- a/packages/app/public/html/perfilPsicologo.html
+++ b/packages/app/public/html/perfilPsicologo.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Pérfil</title>
+        <title>Pérfil User|Health Space</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
         <link rel="stylesheet" type="text/css" href="../alertifyjs/css/alertify.css">
@@ -32,7 +32,7 @@
         <link rel="stylesheet" href="../css/styleAc.css">
         <link rel="stylesheet" href="../css/estilosAc.css">
         <link rel="stylesheet" href="../css/menuAc.css">
-        <script src="../js/activity.js"></script>
+        
 
     </head>
     <!-- Menu -->
@@ -40,11 +40,11 @@
         <div class= "contenedor">
             <h1>HEALTH SPACE</h1>
             <input type="checkbox" id="menu-bar">
-            <label class="icon-menu" for = "menu-bar" ></label>
+            <label class="icon-menu" for = "menu-bar" id="icon-menu"></label>
             <nav class="menu">
                 <a href="perfilUsuario.html">Mi Perfil</a>
                 <a href="tableroDeEventos.html" >Actividades</a>
-                <a href="crearEventos.html">Crear Evento</a>
+                <a href=" ">Ver Dashboard</a>
                 <a href="index.html">salir</a>
             </nav>
         </div>
@@ -52,6 +52,13 @@
 
     <body>
 
+        <div class = "sevice">
+            <div class= "contenedor1" id="perfil">
+                <div class="col-12 my-13 pt-3 shadow">
+                    <hr>
+                </div>
+            </div>
+        </div>
         <!-- Service End -->
         <!-- Service End -->
 
@@ -72,5 +79,7 @@
 
         <!-- Template Javascript -->
         <script src="../js/main.js"></script>
+        <script src="../js/perfilPsicologo.js"></script>
     </body>
 </html>
+
