--- a/packages/app/public/html/tableroDeEventosPsicologo.html
+++ b/packages/app/public/html/tableroDeEventosPsicologo.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Tablero De Actividades</title>
+        <title>Tablero Actividades|Health Space</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
         <link rel="stylesheet" type="text/css" href="../alertifyjs/css/alertify.css">
