Se agrega función de unimer

--- a/packages/app/public/html/tableroDeEventos.html
+++ b/packages/app/public/html/tableroDeEventos.html
@@ -10,6 +10,7 @@
 
 	    <script src="../jquery-3.2.1.min.js"></script>
 	    <script src="../alertifyjs/alertify.js"></script>
+        <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 
         <!-- Google Font -->
         <link href="https://fonts.googleapis.com/css2?family=Lato&family=Oswald:wght@200;300;400&display=swap" rel="stylesheet">
@@ -18,6 +19,7 @@
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
         <link href="../lib/animate/animate.min.css" rel="stylesheet">
         <link href="../lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+
 
         <!-- Template Stylesheet -->
         <link href="../css/styleAc.css" rel="stylesheet">
