--- a/packages/app/public/html/dashboard.html
+++ b/packages/app/public/html/dashboard.html
@@ -118,7 +118,7 @@
                 </div>
                 <div class="user">
                     <div class="imagen">
-                        <img src="../img/Camila.jpg" alt="">
+                        <img src="../img/perfil.jpg" alt="">
                     </div>
                 </div>
             </dir>
