--- a/packages/app/public/html2/dashCrearEvento.html
+++ b/packages/app/public/html2/dashCrearEvento.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="../css/stylend.css">
 </head>
 <body>
-    <div class="container">
+    <div class="containerr">
         <div class="navigation">
             <ul>
                 <li>
@@ -57,7 +57,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="dashUsuario.html">
                         <span class="icon"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-user" width="20" height="20" viewBox="0 0 24 24" stroke-width="1" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                             <circle cx="12" cy="7" r="4" />
@@ -77,7 +77,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="dashCrearEvento.html">
                         <span class="icon"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-plus" width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                             <line x1="12" y1="5" x2="12" y2="19" />
@@ -112,7 +112,7 @@
                 </div>
                 <div class="search">
                     <label>
-                        <input type="text" placeholder="search here">
+                    <!-- <input type="text" placeholder="search here">-->
                     </label>
                 </div>
                 <div class="user">
@@ -120,57 +120,27 @@
                         <img src="../img/perfil.jpg" alt="">
                     </div>
                 </div>
-            </dir>
-            <div class="cardbox">
-                <div class="card sombra">
-                    <div>
-                        <div class="numbers">442</div>
-                        <div class="cardName">Challenge Views</div>
-                    </div>
-                    <div class="iconBox">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-eye" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#36bed9" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                            <circle cx="12" cy="12" r="2" />
-                            <path d="M22 12c-2.667 4.667 -6 7 -10 7s-7.333 -2.333 -10 -7c2.667 -4.667 6 -7 10 -7s7.333 2.333 10 7" />
-                        </svg>
-                    </div>
-                </div>
-                <div class="card sombra">
-                    <div>
-                        <div class="numbers">79</div>
-                        <div class="cardName">Participants</div>
-                    </div>
-                    <div class="iconBox">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-users" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#36bed9" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                            <circle cx="9" cy="7" r="4" />
-                            <path d="M3 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2" />
-                            <path d="M16 3.13a4 4 0 0 1 0 7.75" />
-                            <path d="M21 21v-2a4 4 0 0 0 -3 -3.85" />
-                        </svg>
-                    </div>
-                </div>
-                <div class="card sombra">
-                    <div>
-                        <div class="numbers">108</div>
-                        <div class="cardName">Comments</div>
-                    </div>
-                    <div class="iconBox">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-message-circle-2" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#36bed9" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                            <path d="M3 20l1.3 -3.9a9 8 0 1 1 3.4 2.9l-4.7 1" />
-                            <line x1="12" y1="12" x2="12" y2="12.01" />
-                            <line x1="8" y1="12" x2="8" y2="12.01" />
-                            <line x1="16" y1="12" x2="16" y2="12.01" />
-                        </svg>
-                    </div>
-                </div>
+            </dir><center>
+            <div class="cardbox centrar">
+                    <section class="Crear-evento sombra">
+                        <h4>Crear un evento</h4>
+                        <input class="controls" type="text" name="palabras" id="palabras" placeholder="Ingrese la categoria">
+                        <input class="controls" type="text" name="nombreEvento" id="nombreEvento" placeholder="Ingrese el nombre del evento">
+                        <b>Ingrese la fecha del evento:</b>
+                        <input class="controls" type="date" name="fecha" id="fecha">
+                        <input class="controls" type="text" name="direccion" id="direccion" placeholder="Ingrese la direccion del evento">
+                        <b>Ingrese una descripción del Evento:</b>
+                        <textarea name="textarea" id="descripcion" rows="3" cols="60"></textarea>
+                        <p>Estoy de acuerdo con <input type="radio"><a href="#">Terminos y Condiciones</a></p>
+                        <input class="botons" type="button" onclick="getData()" value="Crear">
+                        <p><a href="http://localhost:5000/html/tableroDeEventos.html">volver</a></p>
+                    </section>
+            </div></center>
                 <!--
                     ###############
                     Aqui agregar
                     ###############
                 -->
-
 
                 <!--<div class="details">
                     <dir class="recentOrders sombra">
@@ -205,5 +175,6 @@
         </div>
     </div>
     <script src="../js/dashboard.js"></script>
+    <script src="../js/crearEvento.js"></script>
 </body>
 </html>
