--- a/packages/app/public/html2/dashUsuario.html
+++ b/packages/app/public/html2/dashUsuario.html
@@ -57,7 +57,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="dashUsuario.html">
                         <span class="icon"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-user" width="20" height="20" viewBox="0 0 24 24" stroke-width="1" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                             <circle cx="12" cy="7" r="4" />
@@ -77,7 +77,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="dashCrearEvento.html">
                         <span class="icon"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-plus" width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                             <line x1="12" y1="5" x2="12" y2="19" />
@@ -87,7 +87,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="index.html">
                         <span class="icon"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-bar-left" width="20" height="20" viewBox="0 0 24 24" stroke-width="1" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                             <line x1="4" y1="12" x2="14" y2="12" />
@@ -112,7 +112,7 @@
                 </div>
                 <div class="search">
                     <label>
-                        <input type="text" placeholder="search here">
+                    <!-- <input type="text" placeholder="search here">-->
                     </label>
                 </div>
                 <div class="user">
@@ -124,47 +124,63 @@
             <div class="cardbox">
                 <div class="card sombra">
                     <div>
-                        <div class="numbers">442</div>
-                        <div class="cardName">Challenge Views</div>
+                        <div class="numbers">6</div>
+                        <div class="cardName">Challenges completed</div>
                     </div>
                     <div class="iconBox">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-eye" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#36bed9" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-trophy" width="50" height="50" viewBox="0 0 24 24" stroke-width="1.5" stroke="#36bed9" fill="none" stroke-linecap="round" stroke-linejoin="round">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                            <circle cx="12" cy="12" r="2" />
-                            <path d="M22 12c-2.667 4.667 -6 7 -10 7s-7.333 -2.333 -10 -7c2.667 -4.667 6 -7 10 -7s7.333 2.333 10 7" />
+                            <line x1="8" y1="21" x2="16" y2="21" />
+                            <line x1="12" y1="17" x2="12" y2="21" />
+                            <line x1="7" y1="4" x2="17" y2="4" />
+                            <path d="M17 4v8a5 5 0 0 1 -10 0v-8" />
+                            <circle cx="5" cy="9" r="2" />
+                            <circle cx="19" cy="9" r="2" />
                         </svg>
                     </div>
                 </div>
                 <div class="card sombra">
                     <div>
-                        <div class="numbers">79</div>
-                        <div class="cardName">Participants</div>
+                        <div class="numbers">9</div>
+                        <div class="cardName">challenges not completed</div>
                     </div>
                     <div class="iconBox">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-users" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#36bed9" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-alert-circle" width="50" height="50" viewBox="0 0 24 24" stroke-width="1.5" stroke="#36bed9" fill="none" stroke-linecap="round" stroke-linejoin="round">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                            <circle cx="9" cy="7" r="4" />
-                            <path d="M3 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2" />
-                            <path d="M16 3.13a4 4 0 0 1 0 7.75" />
-                            <path d="M21 21v-2a4 4 0 0 0 -3 -3.85" />
+                            <circle cx="12" cy="12" r="9" />
+                            <line x1="12" y1="8" x2="12" y2="12" />
+                            <line x1="12" y1="16" x2="12.01" y2="16" />
                         </svg>
-                    </div>
+                        </div>
                 </div>
                 <div class="card sombra">
                     <div>
-                        <div class="numbers">108</div>
-                        <div class="cardName">Comments</div>
+                        <div class="numbers">1</div>
+                        <div class="cardName">I created event</div>
                     </div>
                     <div class="iconBox">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-message-circle-2" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#36bed9" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-square-plus" width="50" height="50" viewBox="0 0 24 24" stroke-width="1.5" stroke="#36bed9" fill="none" stroke-linecap="round" stroke-linejoin="round">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                            <path d="M3 20l1.3 -3.9a9 8 0 1 1 3.4 2.9l-4.7 1" />
-                            <line x1="12" y1="12" x2="12" y2="12.01" />
-                            <line x1="8" y1="12" x2="8" y2="12.01" />
-                            <line x1="16" y1="12" x2="16" y2="12.01" />
+                            <rect x="4" y="4" width="16" height="16" rx="2" />
+                            <line x1="9" y1="12" x2="15" y2="12" />
+                            <line x1="12" y1="9" x2="12" y2="15" />
                         </svg>
                     </div>
                 </div>
+
+            
+                <div class="card sombra">
+                    <div class= "contenedor1" id="perfil">
+                        <div class="col-12 my-13 pt-3 shadow">
+                            <hr>
+                            <div class="contenedor2">
+                                <div class="section-header">
+                                    <h2>Lista de Actividades</h2>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                
                 <!--
                     ###############
                     Aqui agregar
@@ -205,5 +221,7 @@
         </div>
     </div>
     <script src="../js/dashboard.js"></script>
+    <script src="../js/perfilUser.js"></script>
+
 </body>
 </html>
