--- a/packages/app/public/html2/index.html
+++ b/packages/app/public/html2/index.html
@@ -54,7 +54,7 @@
                     </article>
                 </div>
             </section>
-            <section id="info">
+            <!--<section id="info">
                 <h3>Testimonios.</h3>
                 <div class="contenedor">
                     <div class="info-pet">
@@ -74,7 +74,7 @@
                         <h4>Andres Sanchez</h4>
                     </div>
                 </div>
-            </section>
+            </section>-->
         </main>
         <footer>
             <div class="contenedor">
