--- a/packages/app/public/html2/dashUsuario.html
+++ b/packages/app/public/html2/dashUsuario.html
@@ -167,8 +167,64 @@
                         </svg>
                     </div>
                 </div>
+            </div>
+            <div class="details">
+                <div class="recentOrders sombra">
+                    <div class="cardHeader">
+                        <h2>Challenges</h2>
+                        <a href="#" class="btn">View all</a>
+                    </div>
+                    <table>
+                        <thead>
+                            <tr>
+                                <td>Name</td>
+                                <td>Place</td>
+                                <td>Hour</td>
+                                <td>Description</td>
+                                <td>Delete</td>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Paseo en bici</td>
+                                <td>los heroes</td>
+                                <td>11:00 pm</td>
+                                <td><a href="#" class="btn status">go</a></td>
+                                <td><a href="#" class="btn-r status">why?</a></td>
+                            </tr>
+                            <tr>
+                                <td>Paseo en bici</td>
+                                <td>los heroes</td>
+                                <td>11:00 pm</td>
+                                <td><a href="#" class="btn status">go</a></td>
+                                <td><a href="#" class="btn-r status">why?</a></td>
+                            </tr>
+                            <tr>
+                                <td>Paseo en bici</td>
+                                <td>los heroes</td>
+                                <td>11:00 pm</td>
+                                <td><a href="#" class="btn status">go</a></td>
+                                <td><a href="#" class="btn-r status">why?</a></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="recentCustomers sombra">
+                    <div class="cardHeader">
+                        <h2>Progress</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="../js/dashboard.js"></script>
+    <script src="../js/perfilUser.js"></script>
 
-            
+</body>
+</html>
+
+
+            <!--
                 <div class="card sombra">
                     <div class= "contenedor1" id="perfil">
                         <div class="col-12 my-13 pt-3 shadow">
@@ -180,48 +236,3 @@
                             </div>
                         </div>
                     </div>
-                
-                <!--
-                    ###############
-                    Aqui agregar
-                    ###############
-                -->
-
-
-                <!--<div class="details">
-                    <dir class="recentOrders sombra">
-                        <div class="cardHeader">
-                            <h2>See challenges</h2>
-                            <a href="#"> View All</a>
-                        </div>
-                        <table>
-                            <thead>
-                                <td>Challenge Name</td>
-                                <td>Lugar</td>
-                                <td>Place</td>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>Jugar tejo</td>
-                                    <td>Bola 15</td>
-                                    <td><span class="status Activo">Activo</span></td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </dir>
-                    <dir class="recentCustomers sombra">
-                        <div class="cardHeader">
-                            <h2>See challenges</h2>
-                            <a href="#" class="btn"> Mood</a>
-                        </div>
-                    </dir>
-                </div>
-                -->
-            </div>
-        </div>
-    </div>
-    <script src="../js/dashboard.js"></script>
-    <script src="../js/perfilUser.js"></script>
-
-</body>
-</html>
