Rediseño de la pagina principal a partir de los mockups

--- a/packages/app/public/html/registroCrador.html
+++ b/packages/app/public/html/registroCrador.html
@@ -22,6 +22,9 @@
             <a href="cursos.html" >Cursos</a>
             <a href="blog.html">Blog</a>
             <a href="contacto.html">Contacto</a>
+            <a href="login.html" class="otra">Login</a>
+            <a href="registroCrador.html" class="otra">Registro Participante</a>
+            <a href="registroCrador.html" class="otra">Registro Psicologo</a>
         </nav>
     </div>
 </header>
