--- a/packages/app/public/html/contacto.html
+++ b/packages/app/public/html/contacto.html
@@ -13,9 +13,12 @@
             <label id="icon-menu" class="icon-menu"></label>
             <nav class="menu">
                 <a href="index.html">Inicio</a>
-                <a href="cursos.html">Cursos</a>
-                <a href="blog.html">Blog</a>
+                <a href="actividades.html">Actividades</a>
+                <a href="blog.html">Galeria</a>
                 <a href="contacto.html">Contacto</a>
+                <a href="login.html" class="otra">Login</a>
+                <a href="registroCrador.html" class="otra">Registro Participante</a>
+                <a href="registroCrador.html" class="otra">Registro Psicologo</a>
             </nav>
         </div>
     </header>
@@ -26,7 +29,7 @@
                 <hr>
                 <br>
                 <br>
-                <a href="index.html" class="rojo"">Regresar al inicio</a>
+                <a href="index.html" class="rojo">Regresar al inicio</a>
             </section>
         </main>
         <footer>
