--- a/packages/app/public/html/index.html
+++ b/packages/app/public/html/index.html
@@ -7,92 +7,33 @@
         <link rel="stylesheet" href="../css/estilos.css">
         <script src="../js/js.js"></script>
     </head>
+  
+    <body>
     <header>
         <div class= "contenedor">
             <h1 class="">HEALTH SPACE</h1>
             <label id="icon-menu" class="icon-menu"></label>
             <nav class="menu">
                 <a href="index.html">Inicio</a>
-                <a href="cursos.html" >Cursos</a>
-                <a href="blog.html">Blog</a>
+                <a href="actividades.html" >Actividades</a>
+                <a href="blog.html">Galeria</a>
                 <a href="contacto.html">Contacto</a>
                 <a href="login.html" class="otra">Login</a>
-                <a href="registroCrador.html" class="otra">Registro</a>
+                <a href="registroCrador.html" class="otra">Registro Participante</a>
+                <a href="registroCrador.html" class="otra">Registro Psicologo</a>
             </nav>
         </div>
     </header>
-    <body>
-        <main>
-            <section id ="bienvenidos">
-                <div class="contenedor">
-                    <h2>BIENVENIDOS A NUESTRO CLUB</h2>
-                    <p>Si usted o alguien que conoce tiene una enfermedad mental,
-                        problemas emocionales o inquietudes sobre sus salud mental,
-                        existen formas de obtener ayuda. Descubre como nuestro club le ofrece un método simple 
-                        y divertido que incentiva la interacción física entre la comunidad,
-                        ofreciendo actividades sociales pensadas por un equipo de psicólogos
-                        de acuerdo a los gustos y comportamientos de las personas para lograr
-                        una cambio positivo en el estado de ánimo de cada participante.
-                        que Use estos recursos para
-                        encontrar ayuda para usted mismo, un amigo o un familiar.
-                </div>
-            </section>
-            <section id="blog">
-                <h3>Lo ultimo de nuestro blog</h3>
-                <div class="contenedor">
-                    <article>
-                        <img src="../img/ayuda.jpg">
-                        <h4>No estas solo</h4>
-                    </article>
-                    <article>
-                        <img src="../img/apoyo.jpg">
-                        <h4>Dejanos ayudarte</h4>
-                    </article>
-                    <article>
-                        <img src="../img/grupo.jpg">
-                        <h4>Te escuchamos, te comprendemos</h4>
-                    </article>
-                </div>
-            </section>
-            <section id="info">
-                <h3>Testimonios.</h3>
-                <div class="contenedor">
-                    <div class="info-pet">
-                        <img src="../img/camila.jpg" alt="">
-                        <h4>Camila Corredor</h4>
-                    </div>
-                    <div class="info-pet">
-                        <img src="../img/tom.jpg" alt="">
-                        <h4>Jerry Valdez</h4>
-                    </div>
-                    <div class="info-pet">
-                        <img src="../img/gab.jpg" alt="">
-                        <h4>Gabriela Jimenez</h4>
-                    </div>
-                    <div class="info-pet">
-                        <img src="../img/tom2.jpg" alt="">
-                        <h4>Andres Sanchez</h4>
-                    </div>
-                </div>
-            </section>
-        </main>
-        <footer>
-            <div class="contenedor">
-                <p class="copy">Salud Mental &copy; 2021</p>
-                <div class="sociales">
-                    <label class="icon-facebook-squared" href="#"></label>
-                    <label class="icon-twitter" href="#"></label>
-                    <label class="icon-instagram" href="#"></label>
-                    <label class="icon-gplus" href="#"></label>
-                </div>
-            </div>
-        </footer>
-    </body>
+    <main>
+        <section id="banner">
+          <img src="../img/banner.jpg">
+          <div class="contenedor">
+            <h2>BIENVENIDOS A HEALTH SPACE</h2>
+            <h2>¿Quienes somos?</h2>
+            <p>Somos una comunidad dispuesta ayudar a personas con  problemas de salud mental a través de un método simple y divertido que incentive la interacción física entre la comunidad, ofreciendo actividades sociales pensadas por un equipo de psicólogos de acuerdo a los gustos y comportamientos de las personas para lograr una cambio positivo en el estado de ánimo de cada participante. </p>
+            <a href="actividades.html" class="leermas">Comenzar</a>
+          </div>
+        </section>
+    </main>
+    </body>    
 </html>
-
-
-
-
-
-
-
