--- a/packages/app/public/html/login.html
+++ b/packages/app/public/html/login.html
@@ -18,9 +18,12 @@
         <label id="icon-menu" class="icon-menu"></label>
         <nav class="menu">
             <a href="index.html">Inicio</a>
-            <a href="cursos.html" >Cursos</a>
-            <a href="blog.html">Blog</a>
+            <a href="actividades.html" >Actividades</a>
+            <a href="blog.html">¿Quienes somos?</a>
             <a href="contacto.html">Contacto</a>
+            <a href="login.html" class="otra">Login</a>
+            <a href="registroCrador.html" class="otra">Registro Participante</a>
+            <a href="registroCrador.html" class="otra">Registro Psicologo</a>
         </nav>
     </div>
 </header>
