--- a/packages/app/public/html/tableroDeEventos.html
+++ b/packages/app/public/html/tableroDeEventos.html
@@ -32,7 +32,8 @@
         <link rel="stylesheet" href="../css/fontelloAc.css">
         <link rel="stylesheet" href="../css/styleAc.css">
         <link rel="stylesheet" href="../css/estilosAc.css">
-        <link rel="stylesheet" href="../css/menuAc.css">
+        <link rel="styleshee
+        t" href="../css/menuAc.css">
         <link rel="stylesheet" href="../css/normallize.css">
     <link rel="stylesheet" type="text/css" href="../css/stylend.css">
         <script src="../js/activity.js"></script>
