Se agrega rutas staticas

--- a/packages/app/public/html2/index.html
+++ b/packages/app/public/html2/index.html
@@ -3,9 +3,9 @@
     <head>
         <title>HEALTH SPACE</title>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="../css/fontello.css">
-        <link rel="stylesheet" href="../css/estilos.css">
-        <script src="../js/js.js"></script>
+        <link rel="stylesheet" href="./css/fontello.css">
+        <link rel="stylesheet" href="./css/estilos.css">
+        <script src="./js/js.js"></script>
     </head>
     <header>
         <div class= "contenedor">
@@ -41,15 +41,15 @@
                 <h3>Lo ultimo de nuestro blog</h3>
                 <div class="contenedor">
                     <article>
-                        <img src="../img/ayuda.jpg">
+                        <img src="./img/ayuda.jpg">
                         <h4>No estas solo</h4>
                     </article>
                     <article>
-                        <img src="../img/apoyo.jpg">
+                        <img src="./img/apoyo.jpg">
                         <h4>Dejanos ayudarte</h4>
                     </article>
                     <article>
-                        <img src="../img/grupo.jpg">
+                        <img src="./img/grupo.jpg">
                         <h4>Te escuchamos, te comprendemos</h4>
                     </article>
                 </div>
